data selesai
